# SANCTIMONIA

./: .flake8  .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt  README.md  pyproject.toml
bench/: bench_comprehensive.py
example/: test_ident.py  test_identity.py
models/: cg_initializer.json  cg_initializer.onnx  cg_initializer.onnx.data
models/examplemodel/: cg_initializer.onnx  cg_initializer.onnx.data
models/exports/: cg_initializer.json  cg_initializer.onnx  cg_initializer.onnx.data
models/highmodel/: cg_initializer.onnx  cg_initializer.onnx.data
models/subspace/: cg_initializer.json  cg_initializer.onnx  cg_initializer.onnx.data
src/sanctimonia/: __init__.py  core.pyi  main.py
src/sanctimonia/cogs/: __init__.py  preprocessor.py  solver.py
src/sanctimonia/types/: __init__.py  exception.py  typing.py
