# pyproject.toml

[project]
name = "sanctimonia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Shimgo2008", email = "Shimgo2008@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "nanobind>=2.11.0",
    "numpy>=2.4.2",
    "scipy>=1.17.0",
]

[build-system]
requires = ["scikit-build-core>=0.11.6", "nanobind>=2.11.0"]
build-backend = "scikit_build_core.build"

[dependency-groups]
dev = [
    "ninja>=1.13.0",
    "scikit-build-core>=0.11.6",
]

[tool.scikit-build-core]
cmake.version = ">=3.21.0"
ninja = true
# パッケージの場所を明示（推奨）
wheel.packages = ["src/sanctimonia"]
